[package]
name = "bevy_2d_cam"
version = "0.1.0"
edition = "2024"

[features]
bevy_egui = ["dep:bevy_egui"]

[dependencies]
bevy = { version = "0.15", features = ["bevy_window", "bevy_core_pipeline"], default-features = false }
bevy_egui = { version = "0.33", optional = true, default-features = false }
