[package]
name = "bevy_2d_cam"
version = "0.1.0"
edition = "2024"

[features]
bevy_egui = ["dep:bevy_egui"]

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "bevy_render",
  "bevy_asset",
  "bevy_sprite",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_ui",
  "default_font",
  "bevy_text",
] }
bevy-inspector-egui = { version = "0.31", default-features = false, features = ["bevy_render"] }
bevy_egui = { version = "0.34", default-features = false, features = ["default_fonts"] }
rand = "0.9"

[dependencies]
bevy = { version = "0.16", features = [
  "bevy_window",
  "bevy_core_pipeline",
], default-features = false }
bevy_egui = { version = "0.34", optional = true, default-features = false }

[[example]]
name = "inspector"
required-features = ["bevy_egui"]